outputs/workspace_output_1771851673_2411.txt
 --> network/wireguard.rs:9:16
  |
9 | use std::net::{IpAddr, Ipv4Addr};
  |                ^^^^^^

error[E0624]: associated function `new` is private
